--- a/Basic Calculator/task/src/main/res/values/styles.xml
+++ b/Basic Calculator/task/src/main/res/values/styles.xml
@@ -4,8 +4,10 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:textColorHint">#949494</item>
+
     </style>
 
 </resources>
